landing-page/assets/css/styles.css
* {
  box-sizing: border-box;
}

:root {
  --font-heading: "Sen", sans-serif;
  --primary-color: #ffb900;
}

html {
  font-size: 62.5%;
}

body {
  font-size: 1.6rem;
  font-family: "Poppins", sans-serif;
}

/* --------COMMON-------- */
.heading-level2 {
  color: #171100;
  font-family: var(--font-heading);
  font-size: 3.8rem;
  font-weight: 700;
  line-height: 4.8rem; /* 126.316% */
  letter-spacing: -0.076rem;
}

.main-content {
  width: 1170px;
  margin-left: auto;
  margin-right: auto;
  max-width: calc(100% - 48px);
}

a {
  text-decoration: none;
}

.btn {
  display: inline-block;
  padding: 0px 16px;
  color: #fff;
  font-size: 1.6rem;
  font-weight: 600;
  border-radius: 24.5px;
  background: #171100;
  line-height: 50px;
  min-width: 118px;
  text-align: center;
}

.btn:hover {
  opacity: 0.8;
  cursor: pointer;
}
/* --------HEADER-------- */
.header {
  background-color: #fffcf4;
}

.header.fixed {
  position: sticky;
  top: -28px;
  z-index: 1;
}

.header .body {
  display: flex;
  align-items: center;
  padding: 36px 0 8px;
}

.nav ul {
  display: flex;
}

.nav {
  margin-left: auto;
}

.nav a {
  color: #5f5b53;
  font-size: 1.6rem;
  padding: 8px 21px;
  position: relative;
}

.nav li.active,
.nav a:hover {
  color: #171100;
  text-shadow: 1px 0 0 currentColor;
}

.nav li.active a::after {
  display: block;
  position: absolute;
  left: 21px;
  bottom: 6px;
  content: "";
  width: 12px;
  height: 2px;
  border-radius: 1px;
  background: #171100;
}

.header .btn-sign-up {
  min-width: 144px;
}

.header .action {
  margin-left: 49px;
}

/* --------HERO-------- */
.hero {
  padding: 57px 0 65px;
  background-color: #fffcf4;
}

.hero .body {
  display: flex;
}
/* --------HERO LEFT-------- */
.hero .media-block .img {
  border-radius: 20px;
  width: 90%;
  height: auto;
  object-fit: cover;
}

.hero .media-block {
  position: relative;
  width: 48%;
}

/* @media (max-width: 991.98px) {
  .hero .body {
    flex-direction: column;
  }

  .hero .media-block,
  .hero .content-block {
    width: 100%;
  }

  .hero .content-block {
    padding-left: 0;
    margin-top: 40px;
  }

  .hero .hero-summary {
    position: static;
    width: 100%;
    max-width: 320px;
    margin-top: 24px;
  }
} */

.hero .hero-summary {
  padding: 24px;
  display: flex;
  flex-direction: column;
  position: absolute;
  bottom: 48px;
  right: 0;
  width: 270px;
  border-radius: 12px;
  background: #fff;
  box-shadow: 0 16px 32px 0 rgba(0, 0, 0, 0.05);
}

.hero-summary .item {
  display: flex;
  align-items: center;
}

.hero-summary .item + .item {
  margin-top: 22px;
}

.hero-summary .icon {
  width: 48px;
  height: 48px;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.hero-summary .icon1 {
  background-color: #fff9e8;
}

.hero-summary .icon2 {
  background-color: #fcefff;
}

.hero-summary .icon3 {
  background-color: #ebeaff;
}

.hero-summary .info {
  margin-left: 16px;
}

.hero-summary .label {
  color: #5f5b53;
  font-size: 1.4rem;
  font-weight: 400;
  line-height: 2.6rem; /* 185.714% */
}

.hero-summary .title {
  color: #171100;
  font-size: 1.8rem;
  font-weight: 600;
  line-height: 3rem; /* 166.667% */
}

/* --------HERO RIGHT-------- */
.hero .content-block {
  width: 52%;
  padding-top: 64px;
  padding-left: 130px;
  /* IF using margin here the layout will be bugged */
}

.hero .heading {
  color: #171100;
  font-family: var(--font-heading);
  font-size: 5.8rem;
  font-weight: 700;
  line-height: 6.8rem; /* 117.241% */
  letter-spacing: -0.116rem;
}

.hero .description {
  margin-top: 28px;
  color: #5f5b53;
  font-size: 1.8rem;
  line-height: 3rem; /* 166.667% */
}

.hero .cta-group {
  margin-top: 38px;
  display: flex;
}

.hero-ctn {
  border-radius: 32px;
  background: var(--primary-color);
  min-width: 180px;
  line-height: 64px;
}

.hero .watch-video {
  border: none;
  background: transparent;
  display: inline-flex;
  color: #171100;
  font-size: 1.8rem;
  font-weight: 600;
  line-height: 3rem; /* 166.667% */
  align-items: center;
  justify-self: center;
  gap: 14px;
  margin-left: 22px;
  cursor: pointer;
}

.hero .watch-video .icon {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  background-color: #ffffff;
  display: flex;
  align-items: center;
  justify-content: center;
}

.hero .desc-recent {
  margin-top: 48px;
}

.hero .stats strong {
  color: #171100;
  font-family: var(--font-heading);
  font-size: 4.4rem;
  font-style: normal;
  font-weight: 700;
  line-height: 5.4rem; /* 122.727% */
  margin-right: 12px;
}

.hero .stats strong:nth-child(2) {
  margin-left: 28px;
}

/* --------POPULAR TOP-------- */
.popular .popular-top {
  padding: 65px 0;
  margin-top: 135px;
}

.popular .popular-top {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.popular .description {
  color: #5f5b53;
  font-size: 1.8rem;
  font-weight: 400;
  width: 458px;
  line-height: 3rem; /* 166.667% */
}

.popular .control {
  display: flex;
  gap: 18px;
}

.popular .control-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  background: transparent;
  width: 40px;
  height: 40px;
  color: var(--primary-color);
  border-radius: 50%;
  border: 1px solid var(--primary-color);
}

.popular .control-btn:hover {
  color: #fff;
  background: var(--primary-color);
  cursor: pointer;
}

/* --------POPULAR COURSE LIST-------- */
.popular .course-list {
  margin-top: -10px;
  display: flex;
  justify-content: space-evenly;
  gap: 30px;
}
.popular .course-item .thumb {
  width: 100%;
  max-width: 370px;
  max-height: 278px;
  object-fit: cover;
}

.popular .course-item .description {
  color: #5f5b53;
  font-size: 1.4rem;
  font-weight: 400;
  line-height: 2.6rem; /* 185.714% */
  margin-top: 6px;
  max-width: 370px;
  width: 100%;
}

.popular .course-item {
  display: flex;
  flex-direction: column;
  border-radius: 12px;
  border: 1px solid #e2dfda;
  background: #fff;
}

.popular .course-item:hover {
  border: 1px solid transparent;
  /* nếu để border: transparent ko thì sẽ xóa cái viền => animation ko mượt  */
  border-radius: 12px;
  background: #fff;
  box-shadow: 0 18px 60px 0 rgba(0, 0, 0, 0.07);
}

.popular .head {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.popular .course-item .rating {
  display: flex;
  justify-self: center;
  align-items: center;
}

.popular .course-item .btn-book-now {
  border-radius: 25px;
  background: #171100;
  color: #fff;
}

.popular .course-item .btn-book-now:hover {
  background: var(--primary-color);
  color: #fff;
}

.popular .course-item .title a,
.popular .course-item .price {
  color: #171100;
  font-size: 1.8rem;
  font-weight: 600;
  line-height: 3rem; /* 166.667% */
}

.popular .course-item .booking {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: 12px;
}

.popular .course-item .info {
  padding: 16px 22px 32px;
}

.popular .rating .avalue {
  margin-left: 6px;
}

